# metanuke

./: .gitignore  Cargo.toml  README.md  test.sh
src/: error.rs  file.rs  identify.rs  main.rs  options.rs  util.rs
src/metadata/: docx.rs  flac.rs  jpeg.rs  mod.rs  mp3.rs  mp4.rs  office.rs  pdf.rs  png.rs  webp.rs  xlsx.rs  zip.rs
src/test/: flac.rs  jpeg.rs  mod.rs  mp3.rs  mp4.rs  pdf.rs  png.rs  webp.rs  zip.rs
test/: jpeg  png  run.sh
